--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "useref": "^1.4.3"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "jquery-validation": "^1.15.1"
   }
 }
