--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "gulp-useref": "^4.0.1",
@@ -30,6 +31,7 @@
     "useref": "^1.4.3"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.15.1"
   }
