--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ STRIPE_PUBLIC_KEY=pk_test_....
 STRIPE_SECRET_KEY=sk_test_....
 
 SERVER_ENDPOINT=http://localhost:8000/app.php
+
+PRICE_ONE_TIME=1497
+PRICE_PLAN=797
