--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,6 @@ STRIPE_SECRET_KEY=sk_test_....
 
 SERVER_ENDPOINT=http://localhost:8000/app.php
 
+PRODUCT_ID=0123456789abcde
 PRICE_ONE_TIME=1497
 PRICE_PLAN=797
